[package]
name = "petsc-rs"
version = "0.1.0"
authors = ["Tristan Konolige <tristan.konolige@gmail.com>"]
edition = "2018"

[dependencies]
mpi = { path = "/Users/tristan/Build/rsmpi" }

[build-dependencies]
bindgen = "0.50"
pkg-config = "0.3.16"
quote = "1.0"
multimap = "*"

[build-dependencies.syn]
version = "1.0.5"
features = ["fold", "parsing", "full", "extra-traits"]
