[package]
name = "petsc-rs"
version = "0.1.0"
authors = ["Tristan Konolige <tristan.konolige@gmail.com>"]
edition = "2018"

[dependencies]
mpi = {git = "https://github.com/rsmpi/rsmpi.git", rev = "4f07e74"}

[build-dependencies]
bindgen = "*"
pkg-config = "*"
quote = "1.0"
multimap = "*"

[build-dependencies.syn]
version = "1.0.5"
features = ["fold", "parsing", "full", "extra-traits"]
